# rats-pro-project

./: .gitignore  Dockerfile  MANIFEST.in  README.md  README.rst  manage.py  requirements.txt  setup.cfg
client_data/: client_data_2023-08-23_19-43-07.csv  client_data_2023-08-23_19-46-49.csv
datasets_collation/: apps.py  forms.py  tests.py  views.py
datasets_collation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
datasets_collation/templates/: read_csv_datasets.html
datasets_collation/test_data/: sample_data.csv
ratspro_dataset/: asgi.py  settings.py  urls.py  wsgi.py
